--- a/app/scss/components/_buttons.scss
+++ b/app/scss/components/_buttons.scss
@@ -2,6 +2,7 @@ button,.button{
 	border:1px solid white;
 	color:white;
 	padding: 10px 20px;
+	margin-top:10px;
 }
 .button--special{
 	color:$color__font;
