--- a/app/scss/pages/_index.scss
+++ b/app/scss/pages/_index.scss
@@ -40,14 +40,27 @@
 .section__cards{
 	background: #2B343B;
 }
+.content__container{
+	max-width:500px;
+}
 
 .content__intro{
-	min-height: 300px;
+	min-height: 500px;
 	
 	background:linear-gradient(to bottom,rgba(0,0,0,.5) 0,transparent 50%,rgba(0,0,0,.5) 90%) ,url(https://d1k976m6pd0u9m.cloudfront.net/public/media/5bbc9b412c7d7.jpeg);
 }
 .content__cta{
-	margin-top:32px;
+	display:flex;
+	flex-wrap:wrap;
+	justify-content:Center;
+}
+@media only screen and (min-width:350px){
+
+	.content__cta{
+		a:nth-child(2){
+			margin-left:1rem;
+		}
+	}
 }
 .content--parallax{
 	background-position:fixed;
